--- a/README
+++ b/README
@@ -38,6 +38,11 @@ Github, внести свой публичный ключ как главный 
 
    pip install django # установка последней версии Джанго (1.3)
 
+   pip install PIL # установка Python Image Library
+
+   ВНИМАНИЕ! PIL должен быть собран с поддержкой библиотеки freetype, это
+   требуется для отрисовки капчи.
+
 7. Исключение из поиска git файлов, не относящихся непосредственно к проекту
 
    edit .gitignore.tmpl # добавить лишние файлы от IDE или текстового редактора
