Issue #44 дополннения по форматам данных отправляемых сервлету

--- a/doc/servlet_interface.org
+++ b/doc/servlet_interface.org
@@ -1,4 +1,3 @@
-
 * Взаимодействие с сервлетом
 
 ** Общие данные
@@ -64,57 +63,65 @@
 
 ** Формат запроса к сервлету
 
-Запрос передается в виде POST запроса. Поля запроса:
+Запрос передается в виде POST запроса. 
+
+Чекбоксы передаются в виде 'on' в случае, если чекбокс отмечен, или в
+виде пустой строки, если чекбокс не отмечен.
+
+Числа передаются в виде строки, например числу 100 соответствует строка '100'.
+
+Поля запроса:
 
 Поля минимального набора данных (Шаг 1) калькулятора):
 
-| Название поля      |                            | Примечание         |
-|--------------------+----------------------------+--------------------|
-| mark               | 'Марка автомобиля'         |                    |
-| model              | 'Модель автомобиля'        |                    |
-| model_year         | 'Год выпуска'              |                    |
-| wheel              | 'Руль'                     | 'right' или 'left' |
-| power              | 'Мощность'                 |                    |
-| city               | 'Регистрация собственника' |                    |
-| age                | 'Стаж вождения'            |                    |
-| experience_driving | 'Опыт вождения'            |                    |
-| price              | 'Стоимость'                |                    |
-| credit             | 'Кредит'                   |                    |
+| Название поля      |                            | Источник |                    |
+|                    |                            | данных   |                    |
+|--------------------+----------------------------+----------+--------------------|
+| mark               | 'Марка автомобиля'         | БД       |                    |
+| model              | 'Модель автомобиля'        | БД       |                    |
+| model_year         | 'Год выпуска'              | БД       |                    |
+| wheel              | 'Руль'                     |          | 'right' или 'left' |
+| power              | 'Мощность'                 | БД       |                    |
+| city               | 'Регистрация собственника' | БД       |                    |
+| age                | 'Возраст'                  |          |               0-18 |
+| experience_driving | 'Стаж вождения'            |          |               0-49 |
+| price              | 'Стоимость'                | БД       |                    |
+| credit             | 'Кредит'                   |          |            'on'/'' |
 
 Поля дополнительного набора данных (Шаг 2 калькулятора):
 
-| standart_deductible                 | 'Стандартная франшиза'                                            |
-| second_deductible                   | 'Франшиза со второго случая'                                      |
-| civil_liability                     | 'Гражданскую ответственность (дополнительно к полису ОСАГО)'      |
-| factor_price                        | 'Цена'                                                            |
-| factor_easepay                      | 'Простота выплат'                                                 |
-| factor_insuranceterms               | 'Условия страхования'                                             |
-| factor_qualitysupport               | 'Качество информационной поддержки'                               |
-| factor_reputation                   | 'Репутация компании'                                              |
-| factor_accessibility                | 'Доступность компании'                                            |
-| factor_service                      | 'Сервис'                                                          |
-| damage_full_destruction             | 'Возмещать ущерб только при полной гибели или угоне автомобиля'   |
-| not_assure_theft                    | 'Не страховать автомобиль от угона'                               |
-| burglar_alarm                       | 'Охранная система автомобиля '                                    |
-| single_payment_of_the_policy        | 'Единовременная оплата полиса'                                    |
-| repair_direction_company            | 'Ремонт по направлению страховой компании'                        |
-| repair_official_dealer              | 'Ремонт у официального дилера по направлению страховой компании'  |
-| repair_engineering_centre           | 'Ремонт в техническом центре по вашему выбору'                    |
-| payment_on_accounting               | 'Выплата деньгами по калькуляции'                                 |
-| payment_on_accounting_deterioration | 'Выплата деньгами по калькуляции с учетом износа запасных частей' |
-| payment_on_accounting_deterioration | 'Выплата деньгами по калькуляции с учетом износа запасных частей' |
-| glass_elements_one_year             | 'Стекла и стеклянные элементы. Один раз в год'                    |
-| glass_elements_without_restriction  | 'Стекла и стеклянные элементы. Без ограничения'                   |
-| repair_3_one_year                   | 'Ремонт в пределах 3%. Один раз в год'                            |
-| repair_5_two_year                   | 'Ремонт в пределах 5%. Два раза в год'                            |
-| evacuation                          | 'Эвакуация автомобиля к месту стоянки или ремонта'                |
-| technical_assistance                | 'Техническая попощь'                                              |
-| call_taxi                           | 'Вызов такси'                                                     |
-| lease_car                           | 'Аренда автомобиля'                                               |
-| departure_two_player_dtp            | 'Выезд только на ДТП с двумя и более участниками. Сбор справок'   |
-| departure_all_dtp                   | 'Выезд на любые ДТП. Сбор справок'                                |
-| health_driver_and_passenger         | 'Здоровье водителя и пассажиров'                                  |
-| kasko_plus_osago                    | 'Купить полис КАСКО вместе с ОСАГО'                               |
+| standart_deductible                 | 'Стандартная франшиза'                                            | 0 до 50000 с шагом в 5000 |
+| second_deductible                   | 'Франшиза со второго случая'                                      | 0 до 50000 с шагом 5000   |
+| civil_liability                     | 'Гражданскую ответственность (дополнительно к полису ОСАГО)'      | 'on'/''                   |
+| factor_price                        | 'Цена'                                                            | 'on'/''                   |
+| factor_easepay                      | 'Простота выплат'                                                 | 'on'/''                   |
+| factor_insuranceterms               | 'Условия страхования'                                             | 'on'/''                   |
+| factor_qualitysupport               | 'Качество информационной поддержки'                               | 'on'/''                   |
+| factor_reputation                   | 'Репутация компании'                                              | 'on'/''                   |
+| factor_accessibility                | 'Доступность компании'                                            | 'on'/''                   |
+| factor_service                      | 'Сервис'                                                          | 'on'/''                   |
+| damage_full_destruction             | 'Возмещать ущерб только при полной гибели или угоне автомобиля'   | 'on'/''                   |
+| not_assure_theft                    | 'Не страховать автомобиль от угона'                               | 'on'/''                   |
+| burglar_alarm                       | 'Охранная система автомобиля '                                    |  Выбор типа системы       |
+| single_payment_of_the_policy        | 'Единовременная оплата полиса'                                    | 'on'/''                   |
+| repair_direction_company            | 'Ремонт по направлению страховой компании'                        | 'on'/''                   |
+| repair_official_dealer              | 'Ремонт у официального дилера по направлению страховой компании'  | 'on'/''                   |
+| repair_engineering_centre           | 'Ремонт в техническом центре по вашему выбору'                    | 'on'/''                   |
+| payment_on_accounting               | 'Выплата деньгами по калькуляции'                                 | 'on'/''                   |
+| payment_on_accounting_deterioration | 'Выплата деньгами по калькуляции с учетом износа запасных частей' | 'on'/''                   |
+| payment_on_accounting_deterioration | 'Выплата деньгами по калькуляции с учетом износа запасных частей' | 'on'/''                   |
+| glass_elements_one_year             | 'Стекла и стеклянные элементы. Один раз в год'                    | 'on'/''                   |
+| glass_elements_without_restriction  | 'Стекла и стеклянные элементы. Без ограничения'                   | 'on'/''                   |
+| repair_3_one_year                   | 'Ремонт в пределах 3%. Один раз в год'                            | 'on'/''                   |
+| repair_5_two_year                   | 'Ремонт в пределах 5%. Два раза в год'                            | 'on'/''                   |
+| evacuation                          | 'Эвакуация автомобиля к месту стоянки или ремонта'                | 'on'/''                   |
+| technical_assistance                | 'Техническая попощь'                                              | 'on'/''                   |
+| call_taxi                           | 'Вызов такси'                                                     | 'on'/''                   |
+| lease_car                           | 'Аренда автомобиля'                                               | 'on'/''                   |
+| departure_two_player_dtp            | 'Выезд только на ДТП с двумя и более участниками. Сбор справок'   | 'on'/''                   |
+| departure_all_dtp                   | 'Выезд на любые ДТП. Сбор справок'                                | 'on'/''                   |
+| health_driver_and_passenger         | 'Здоровье водителя и пассажиров'                                  | 'on'/''                   |
+| kasko_plus_osago                    | 'Купить полис КАСКО вместе с ОСАГО'                               | 'on'/''                   |
 
 ** Формат ответа сервлета
 
